--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -84,6 +84,11 @@ section
   img
     width: 100%
 
+.background-image
+  background-attachment: fixed
+  background-position: center
+  background-size: cover
+
 .chapter
   text-align: center
 
@@ -94,9 +99,7 @@ section
 .chapter_title
   text-align: center
   text-transform: uppercase
-  background-attachment: fixed
-  background-position: center
-  background-size: cover
+  @extend .background-image
 
   .contents
     padding: 12em 0
@@ -132,6 +135,11 @@ section
 .major-alt
   @extend .major
   font-size: 20px
+
+.copy
+  p
+    font-size: 18px
+    line-height: 1.3
 
 .bordered
   border-top: 2px solid $dark
