--- a/css/style.css
+++ b/css/style.css
@@ -153,24 +153,27 @@ header.story_header {
     width: 100%; }
 
 /* line 87, sass/_base.sass */
+.background-image, .chapter_title, .chapter-1-rethinking-retirement article .increase_of_workers {
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; }
+
+/* line 92, sass/_base.sass */
 .chapter {
   text-align: center; }
-  /* line 90, sass/_base.sass */
+  /* line 95, sass/_base.sass */
   .chapter p {
     font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
     text-transform: uppercase; }
 
-/* line 94, sass/_base.sass */
+/* line 99, sass/_base.sass */
 .chapter_title {
   text-align: center;
-  text-transform: uppercase;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover; }
-  /* line 101, sass/_base.sass */
+  text-transform: uppercase; }
+  /* line 104, sass/_base.sass */
   .chapter_title .contents {
     padding: 12em 0; }
-  /* line 104, sass/_base.sass */
+  /* line 107, sass/_base.sass */
   .chapter_title p {
     border-bottom: 2px solid #383838;
     display: inline-block;
@@ -178,21 +181,21 @@ header.story_header {
     letter-spacing: 1px;
     margin: 0 auto;
     padding: 0 1em 0.25em 1em; }
-  /* line 112, sass/_base.sass */
+  /* line 115, sass/_base.sass */
   .chapter_title h2 {
     font-size: 44px;
     margin: 0; }
-  /* line 117, sass/_base.sass */
+  /* line 120, sass/_base.sass */
   .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p {
     border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
-  /* line 120, sass/_base.sass */
+  /* line 123, sass/_base.sass */
   .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p,
   .chapter_title.on_dark_background h2,
   .chapter-1-rethinking-retirement article .chapter_title h2 {
     color: white;
     text-shadow: #383838 0 0 25px; }
 
-/* line 125, sass/_base.sass */
+/* line 128, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -201,12 +204,17 @@ header.story_header {
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 132, sass/_base.sass */
+/* line 135, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 136, sass/_base.sass */
-.bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p {
+/* line 140, sass/_base.sass */
+.copy p {
+  font-size: 18px;
+  line-height: 1.3; }
+
+/* line 144, sass/_base.sass */
+.bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
   margin: 0 auto;
@@ -214,7 +222,7 @@ header.story_header {
   width: 75%; }
 
 /* line 1, sass/_grid.sass */
-.half, .twothirds, .onethird, .threefourths, .onefourth {
+.half, .twothirds, .onethird, .chapter-1-rethinking-retirement article .increase_of_workers p, .threefourths, .onefourth {
   float: left;
   padding: 24px 10px;
   width: 100%; }
@@ -231,7 +239,7 @@ header.story_header {
 
 @media (min-width: 1000px) {
   /* line 22, sass/_grid.sass */
-  .onethird {
+  .onethird, .chapter-1-rethinking-retirement article .increase_of_workers p {
     width: 33.33333%; } }
 
 @media (min-width: 1000px) {
@@ -609,6 +617,35 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
+/* line 87, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .increase_of_workers {
+  overflow: hidden;
+  *zoom: 1;
+  background-image: url('../img/1/grumpy_man.jpg?1369442609');
+  background-position: 70% center;
+  padding: 3em 6em; }
+  /* line 94, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .increase_of_workers p {
+    background: white;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    padding: 2em;
+    float: left;
+    clear: left;
+    text-align: center; }
+    /* line 100, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .increase_of_workers p span {
+      display: block;
+      line-height: 1;
+      margin: 0.25em 0 0.5em;
+      padding: 0.75em 0 0.75em;
+      width: 100%; }
+      /* line 108, sass/_chapter1.sass */
+      .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
+        display: inline-block;
+        font-family: "BodoniW01-PosterItalic";
+        font-size: 60px;
+        margin: 0 0.1em; }
 
 /* line 2, sass/_chapter4.sass */
 .how_long_work .under_65 {
