--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -26,6 +26,10 @@
   .chapter_title
     @extend .on_dark_background
     background-image: image-url('1/path.jpg')
+    background-position: center 100%
+    // background-attachment: scroll
+    background-size: 150%
+
 
   .percentage_of_workers
     p
