Centered nav bar.

--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -47,11 +47,12 @@ header.site_header
   a.pbs
     background: image-url('pbs-light_background.svg') no-repeat left top
     background-size: contain
-    float: left
     margin: .2em 1em 0 0
     width: 38px
     height: 38px
     text-indent: -10000px
+    position: absolute
+    left: 0
 
   a.title
     text-decoration: none
