--- a/css/style.css
+++ b/css/style.css
@@ -333,15 +333,16 @@ header.site_header {
   header.site_header a.pbs {
     background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
     background-size: contain;
-    float: left;
     margin: 0.2em 1em 0 0;
     width: 38px;
     height: 38px;
-    text-indent: -10000px; }
-  /* line 56, sass/_header.sass */
+    text-indent: -10000px;
+    position: absolute;
+    left: 0; }
+  /* line 57, sass/_header.sass */
   header.site_header a.title {
     text-decoration: none; }
-    /* line 59, sass/_header.sass */
+    /* line 60, sass/_header.sass */
     header.site_header a.title h1 {
       color: #aaaaaa;
       font-family: "Bodoni W01 Poster";
@@ -349,12 +350,12 @@ header.site_header {
       font-weight: normal;
       line-height: 1;
       margin: 0; }
-      /* line 67, sass/_header.sass */
+      /* line 68, sass/_header.sass */
       header.site_header a.title h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 19.2px;
         font-style: normal; }
-      /* line 72, sass/_header.sass */
+      /* line 73, sass/_header.sass */
       header.site_header a.title h1 small {
         color: #aaaaaa;
         font-family: "Adobe Caslon W01 Bd It", serif;
@@ -362,12 +363,12 @@ header.site_header {
         font-style: normal;
         padding: 0 2.4px;
         text-transform: lowercase; }
-  /* line 80, sass/_header.sass */
+  /* line 81, sass/_header.sass */
   header.site_header nav {
     font-family: Helvetica, sans-serif;
     font-size: 11px;
     margin-top: 0.25em; }
-    /* line 85, sass/_header.sass */
+    /* line 86, sass/_header.sass */
     header.site_header nav li {
       margin: 0 0.6em;
       padding-bottom: 5px;
@@ -375,7 +376,7 @@ header.site_header {
       -moz-transition: all, 0.2s;
       -o-transition: all, 0.2s;
       transition: all, 0.2s; }
-      /* line 90, sass/_header.sass */
+      /* line 91, sass/_header.sass */
       header.site_header nav li a {
         color: #aaaaaa;
         padding: 0 0.3em;
@@ -390,11 +391,11 @@ header.site_header {
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
         border-bottom: 7px solid #888888; }
-      /* line 99, sass/_header.sass */
+      /* line 100, sass/_header.sass */
       header.site_header nav li:hover a, header.site_header nav li.current_chapter a {
         color: white; }
 
-/* line 102, sass/_header.sass */
+/* line 103, sass/_header.sass */
 header.story_header {
   margin-top: 3em;
   text-align: center;
@@ -402,51 +403,51 @@ header.story_header {
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-  /* line 107, sass/_header.sass */
+  /* line 108, sass/_header.sass */
   header.story_header p,
   header.story_header hr,
   header.story_header h1 span,
   header.story_header h1 em {
     position: relative; }
-  /* line 113, sass/_header.sass */
+  /* line 114, sass/_header.sass */
   header.story_header hr {
     z-index: 1; }
-  /* line 116, sass/_header.sass */
+  /* line 117, sass/_header.sass */
   header.story_header h1 em {
     z-index: 2; }
-  /* line 119, sass/_header.sass */
+  /* line 120, sass/_header.sass */
   header.story_header p,
   header.story_header h1 span,
   header.story_header h1 small,
   header.story_header nav {
     z-index: 3; }
-  /* line 125, sass/_header.sass */
+  /* line 126, sass/_header.sass */
   header.story_header p {
     font-family: "Bodoni MT W01";
     margin-bottom: 30px; }
-    /* line 129, sass/_header.sass */
+    /* line 130, sass/_header.sass */
     header.story_header p:before, header.story_header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 137, sass/_header.sass */
+  /* line 138, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 140, sass/_header.sass */
+  /* line 141, sass/_header.sass */
   header.story_header h1 {
     font-size: 57.6px;
     margin: -0.25em 0 6px;
     word-spacing: -12px; }
-    /* line 145, sass/_header.sass */
+    /* line 146, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 152, sass/_header.sass */
+    /* line 153, sass/_header.sass */
     header.story_header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -455,7 +456,7 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 161, sass/_header.sass */
+  /* line 162, sass/_header.sass */
   header.story_header nav {
     overflow: hidden;
     *zoom: 1;
@@ -463,20 +464,20 @@ header.story_header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 169, sass/_header.sass */
+    /* line 170, sass/_header.sass */
     header.story_header nav li {
       letter-spacing: -1px;
       margin: 0 0.9em; }
-  /* line 174, sass/_header.sass */
+  /* line 175, sass/_header.sass */
   header.story_header.bordered hr {
     display: block; }
-  /* line 177, sass/_header.sass */
+  /* line 178, sass/_header.sass */
   header.story_header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 180, sass/_header.sass */
+    /* line 181, sass/_header.sass */
     header.story_header.bordered h1 em {
       background: white; }
-  /* line 184, sass/_header.sass */
+  /* line 185, sass/_header.sass */
   header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1,
   header.story_header.on_dark_background h1 small,
   .chapter-1-rethinking-retirement article header.story_header h1 small {
