slight refactor for now

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -27,9 +27,7 @@
     @extend .on_dark_background
     background-image: image-url('1/path.jpg')
     background-position: center 100%
-    // background-attachment: scroll
-    background-size: 150%
-
+    background-attachment: scroll
 
   .percentage_of_workers
     p
