--- a/css/style.css
+++ b/css/style.css
@@ -551,8 +551,8 @@ footer {
 .chapter-1-rethinking-retirement article .chapter_title {
   background-image: url('../img/1/path.jpg?1369437709');
   background-position: center 100%;
-  background-size: 150%; }
-/* line 39, sass/_chapter1.sass */
+  background-attachment: scroll; }
+/* line 37, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .expectation_chart {
   background: url('../img/1/expectation_chart.svg?1369441558') left top no-repeat;
   background-size: contain;
@@ -560,7 +560,7 @@ footer {
   width: 90%;
   height: 280px;
   position: relative; }
-  /* line 47, sass/_chapter1.sass */
+  /* line 45, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .expectation_chart .data_point {
     background: rgba(0, 0, 0, 0.8);
     border-radius: 2px;
@@ -583,32 +583,32 @@ footer {
       border-right: 4px solid transparent;
       border-top: 4px solid rgba(0, 0, 0, 0.8);
       margin-bottom: -4px; }
-    /* line 60, sass/_chapter1.sass */
+    /* line 58, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point strong {
       display: block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 24px; }
-    /* line 65, sass/_chapter1.sass */
+    /* line 63, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point.active {
       margin-top: 0;
       opacity: 1; }
-    /* line 69, sass/_chapter1.sass */
+    /* line 67, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-1 {
       left: 157px;
       top: 80px; }
-    /* line 73, sass/_chapter1.sass */
+    /* line 71, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-2 {
       left: 319px;
       top: 46px; }
-    /* line 77, sass/_chapter1.sass */
+    /* line 75, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-3 {
       left: 475px;
       top: 38px; }
-    /* line 81, sass/_chapter1.sass */
+    /* line 79, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-4 {
       left: 642px;
       top: 2px; }
-    /* line 85, sass/_chapter1.sass */
+    /* line 83, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5 {
       background: #548e85;
       left: 804px;
@@ -621,14 +621,14 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 91, sass/_chapter1.sass */
+/* line 89, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers {
   overflow: hidden;
   *zoom: 1;
   background-image: url('../img/1/grumpy_man.jpg?1369444550');
   background-position: 70% center;
   padding: 3em 6em; }
-  /* line 98, sass/_chapter1.sass */
+  /* line 96, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p {
     background: white;
     margin-top: 2em;
@@ -637,14 +637,14 @@ footer {
     float: left;
     clear: left;
     text-align: center; }
-    /* line 104, sass/_chapter1.sass */
+    /* line 102, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span {
       display: block;
       line-height: 1;
       margin: 0.25em 0 0.5em;
       padding: 0.75em 0 0.75em;
       width: 100%; }
-      /* line 112, sass/_chapter1.sass */
+      /* line 110, sass/_chapter1.sass */
       .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
         display: inline-block;
         font-family: "BodoniW01-PosterItalic";
