--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -109,7 +109,13 @@
           margin: 0 .1em
 
   .half_of_american_households
-    //
+    @extend .background-image
+    background-image: image-url('1/jars.jpg')
+    background-position: 20% center
+
+    p
+      @extend .major
+      @include boxed(#fff, left, third, centered)
 
   .one_in_four_workers
     @extend .background-image
@@ -121,6 +127,5 @@
 
       p.first
         @extend .major
-
 
 
