--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -66,3 +66,10 @@
     float: right
   @if $text-alignment == "centered"
     text-align: center
+
+  .major:after
+    content: ""
+    display: block
+    margin: .75em auto 0
+    width: 50px
+    border-bottom: 2px solid $dark
