Our width is actually 800, not 1000.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -37,8 +37,8 @@
   .expectation_chart
     background: image-url('1/expectation_chart.svg') left top no-repeat
     background-size: contain
-    margin: 5em auto 2em auto
-    width: 90%
+    margin: 5em 0 2em -40px
+    width: 870px
     height: 280px
     position: relative
 
@@ -128,4 +128,7 @@
       p.first
         @extend .major
 
+  .outro
+    p
+      @extend .half
 
