--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -43,6 +43,7 @@ header.site_header
 
   .contents
     padding: 0
+    max-width: 1000px
 
   a.pbs
     background: image-url('pbs-light_background.svg') no-repeat left top
