--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,38 +19,38 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 103, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, ../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Applications/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
@@ -139,47 +139,42 @@ section {
   width: 100%;
   z-index: 3; }
 
-/* line 71, sass/_base.sass */
-.contents {
-  overflow: hidden;
-  *zoom: 1; }
-
-/* line 77, sass/_base.sass */
+/* line 76, sass/_base.sass */
 .fixed, header.site_header,
 header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
 
-/* line 82, sass/_base.sass */
+/* line 81, sass/_base.sass */
 .bleed {
   width: 100%;
   height: 100%; }
-  /* line 86, sass/_base.sass */
+  /* line 85, sass/_base.sass */
   .bleed img {
     width: 100%; }
 
-/* line 89, sass/_base.sass */
+/* line 88, sass/_base.sass */
 .background-image, .chapter_title, .chapter-1-rethinking-retirement article .increase_of_workers, .chapter-1-rethinking-retirement article .half_of_american_households, .chapter-1-rethinking-retirement article .one_in_four_workers {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   padding: 3em 6em; }
 
-/* line 95, sass/_base.sass */
+/* line 94, sass/_base.sass */
 .chapter {
   text-align: center; }
-  /* line 98, sass/_base.sass */
+  /* line 97, sass/_base.sass */
   .chapter p {
     font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
     text-transform: uppercase; }
 
-/* line 102, sass/_base.sass */
+/* line 101, sass/_base.sass */
 .chapter_title {
   text-align: center;
   text-transform: uppercase;
   padding: 12em 0; }
-  /* line 108, sass/_base.sass */
+  /* line 107, sass/_base.sass */
   .chapter_title p {
     border-bottom: 2px solid #383838;
     display: inline-block;
@@ -187,22 +182,21 @@ header.story_header {
     letter-spacing: 1px;
     margin: 0 auto;
     padding: 0 1em 0.25em 1em; }
-  /* line 116, sass/_base.sass */
+  /* line 115, sass/_base.sass */
   .chapter_title h2 {
     font-size: 44px;
     margin: 0; }
-  /* line 121, sass/_base.sass */
-  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article header.chapter_title.story_header p, .chapter-1-rethinking-retirement article .chapter_title p {
+  /* line 120, sass/_base.sass */
+  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p {
     border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
-  /* line 124, sass/_base.sass */
-  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article header.chapter_title.story_header p, .chapter-1-rethinking-retirement article .chapter_title p,
+  /* line 123, sass/_base.sass */
+  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p,
   .chapter_title.on_dark_background h2,
-  .chapter-1-rethinking-retirement article header.chapter_title.story_header h2,
   .chapter-1-rethinking-retirement article .chapter_title h2 {
     color: white;
     text-shadow: #383838 0 0 25px; }
 
-/* line 129, sass/_base.sass */
+/* line 128, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -211,16 +205,16 @@ header.story_header {
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 136, sass/_base.sass */
+/* line 135, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 141, sass/_base.sass */
+/* line 140, sass/_base.sass */
 .copy p {
   font-size: 18px;
   line-height: 1.3; }
 
-/* line 145, sass/_base.sass */
+/* line 144, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -229,27 +223,27 @@ header.story_header {
   width: 75%; }
 
 /* line 1, sass/_grid.sass */
-.half, .twothirds, .onethird, .threefourths, .onefourth {
+.half, .chapter-1-rethinking-retirement article .outro p, .twothirds, .onethird, .threefourths, .onefourth {
   float: left;
   padding: 24px 10px;
   width: 100%; }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   /* line 16, sass/_grid.sass */
-  .half {
+  .half, .chapter-1-rethinking-retirement article .outro p {
     width: 50%; } }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   /* line 19, sass/_grid.sass */
   .twothirds {
     width: 66.66667%; } }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   /* line 22, sass/_grid.sass */
   .onethird {
     width: 33.33333%; } }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   /* line 25, sass/_grid.sass */
   .threefourths {
     width: 75%; } }
@@ -258,7 +252,7 @@ header.story_header {
   /* line 28, sass/_grid.sass */
   .onefourth {
     width: 50%; } }
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   /* line 28, sass/_grid.sass */
   .onefourth {
     width: 25%; } }
@@ -266,8 +260,8 @@ header.story_header {
 /* line 31, sass/_grid.sass */
 .container, .contents, header.story_header nav {
   margin: 0 auto;
-  max-width: 1000px;
-  padding: 48px 10px; }
+  max-width: 800px;
+  padding: 48px 0; }
 
 /* line 1, sass/_mixins.sass */
 header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
@@ -329,10 +323,11 @@ header.site_header {
     margin-top: 0; }
   /* line 44, sass/_header.sass */
   header.site_header .contents {
-    padding: 0; }
-  /* line 47, sass/_header.sass */
+    padding: 0;
+    max-width: 1000px; }
+  /* line 48, sass/_header.sass */
   header.site_header a.pbs {
-    background: url('../img/pbs-light_background.svg?1369273560') no-repeat left top;
+    background: url('../img/pbs-light_background.svg?1369272538') no-repeat left top;
     background-size: contain;
     margin: 0.2em 1em 0 0;
     width: 38px;
@@ -340,10 +335,10 @@ header.site_header {
     text-indent: -10000px;
     position: absolute;
     left: 0; }
-  /* line 57, sass/_header.sass */
+  /* line 58, sass/_header.sass */
   header.site_header a.title {
     text-decoration: none; }
-    /* line 60, sass/_header.sass */
+    /* line 61, sass/_header.sass */
     header.site_header a.title h1 {
       color: #aaaaaa;
       font-family: "Bodoni W01 Poster";
@@ -351,12 +346,12 @@ header.site_header {
       font-weight: normal;
       line-height: 1;
       margin: 0; }
-      /* line 68, sass/_header.sass */
+      /* line 69, sass/_header.sass */
       header.site_header a.title h1 em {
         font-family: "BodoniW01-PosterItalic", serif;
         font-size: 19.2px;
         font-style: normal; }
-      /* line 73, sass/_header.sass */
+      /* line 74, sass/_header.sass */
       header.site_header a.title h1 small {
         color: #aaaaaa;
         font-family: "Adobe Caslon W01 Bd It", serif;
@@ -364,12 +359,12 @@ header.site_header {
         font-style: normal;
         padding: 0 2.4px;
         text-transform: lowercase; }
-  /* line 81, sass/_header.sass */
+  /* line 82, sass/_header.sass */
   header.site_header nav {
     font-family: Helvetica, sans-serif;
     font-size: 11px;
     margin-top: 0.25em; }
-    /* line 86, sass/_header.sass */
+    /* line 87, sass/_header.sass */
     header.site_header nav li {
       margin: 0 0.6em;
       padding-bottom: 5px;
@@ -377,7 +372,7 @@ header.site_header {
       -moz-transition: all, 0.2s;
       -o-transition: all, 0.2s;
       transition: all, 0.2s; }
-      /* line 91, sass/_header.sass */
+      /* line 92, sass/_header.sass */
       header.site_header nav li a {
         color: #aaaaaa;
         padding: 0 0.3em;
@@ -392,11 +387,11 @@ header.site_header {
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
         border-bottom: 7px solid #888888; }
-      /* line 100, sass/_header.sass */
+      /* line 101, sass/_header.sass */
       header.site_header nav li:hover a, header.site_header nav li.current_chapter a {
         color: white; }
 
-/* line 103, sass/_header.sass */
+/* line 104, sass/_header.sass */
 header.story_header {
   margin-top: 3em;
   text-align: center;
@@ -404,51 +399,51 @@ header.story_header {
   -moz-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s; }
-  /* line 108, sass/_header.sass */
+  /* line 109, sass/_header.sass */
   header.story_header p,
   header.story_header hr,
   header.story_header h1 span,
   header.story_header h1 em {
     position: relative; }
-  /* line 114, sass/_header.sass */
+  /* line 115, sass/_header.sass */
   header.story_header hr {
     z-index: 1; }
-  /* line 117, sass/_header.sass */
+  /* line 118, sass/_header.sass */
   header.story_header h1 em {
     z-index: 2; }
-  /* line 120, sass/_header.sass */
+  /* line 121, sass/_header.sass */
   header.story_header p,
   header.story_header h1 span,
   header.story_header h1 small,
   header.story_header nav {
     z-index: 3; }
-  /* line 126, sass/_header.sass */
+  /* line 127, sass/_header.sass */
   header.story_header p {
     font-family: "Bodoni MT W01";
     margin-bottom: 30px; }
-    /* line 130, sass/_header.sass */
+    /* line 131, sass/_header.sass */
     header.story_header p:before, header.story_header p:after {
       color: #548e85;
       content: "★";
       font-size: 9.6px;
       padding: 0 6px;
       vertical-align: 4.8px; }
-  /* line 138, sass/_header.sass */
+  /* line 139, sass/_header.sass */
   header.story_header hr {
     display: none; }
-  /* line 141, sass/_header.sass */
+  /* line 142, sass/_header.sass */
   header.story_header h1 {
     font-size: 57.6px;
     margin: -0.25em 0 6px;
     word-spacing: -12px; }
-    /* line 146, sass/_header.sass */
+    /* line 147, sass/_header.sass */
     header.story_header h1 em {
       font-family: "BodoniW01-PosterItalic", serif;
       font-size: 104px;
       font-style: normal;
       margin: 0;
       padding: 0 3px; }
-    /* line 153, sass/_header.sass */
+    /* line 154, sass/_header.sass */
     header.story_header h1 small {
       color: #548e85;
       font-family: "Adobe Caslon W01 Bd It", serif;
@@ -457,7 +452,7 @@ header.story_header {
       padding: 0 2.4px;
       text-transform: lowercase;
       vertical-align: 8px; }
-  /* line 162, sass/_header.sass */
+  /* line 163, sass/_header.sass */
   header.story_header nav {
     overflow: hidden;
     *zoom: 1;
@@ -465,24 +460,23 @@ header.story_header {
     border-bottom: 1px solid #888888;
     line-height: 1;
     padding: 12px 0 9.6px; }
-    /* line 170, sass/_header.sass */
+    /* line 171, sass/_header.sass */
     header.story_header nav li {
       letter-spacing: -1px;
       margin: 0 0.9em; }
-  /* line 175, sass/_header.sass */
+  /* line 176, sass/_header.sass */
   header.story_header.bordered hr {
     display: block; }
-  /* line 178, sass/_header.sass */
+  /* line 179, sass/_header.sass */
   header.story_header.bordered h1 {
     margin-top: -43.2px; }
-    /* line 181, sass/_header.sass */
+    /* line 182, sass/_header.sass */
     header.story_header.bordered h1 em {
       background: white; }
-  /* line 185, sass/_header.sass */
-  header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1, .chapter-1-rethinking-retirement article header.story_header.chapter_title h1,
+  /* line 186, sass/_header.sass */
+  header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1,
   header.story_header.on_dark_background h1 small,
-  .chapter-1-rethinking-retirement article header.story_header h1 small,
-  .chapter-1-rethinking-retirement article header.story_header.chapter_title h1 small {
+  .chapter-1-rethinking-retirement article header.story_header h1 small {
     color: white; }
 
 /* line 1, sass/_footer.sass */
@@ -502,11 +496,11 @@ footer {
     width: 50%; }
     /* line 17, sass/_footer.sass */
     footer nav li.previous {
-      background: url('../img/chapter-previous.svg?1369358830') 30px center no-repeat;
+      background: url('../img/chapter-previous.svg?1369355902') 30px center no-repeat;
       float: left; }
     /* line 21, sass/_footer.sass */
     footer nav li.next {
-      background: url('../img/chapter-next.svg?1369358830') 400px center no-repeat;
+      background: url('../img/chapter-next.svg?1369351919') 400px center no-repeat;
       float: right; }
     /* line 25, sass/_footer.sass */
     footer nav li a {
@@ -556,15 +550,15 @@ footer {
   text-align: center; }
 /* line 26, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .chapter_title {
-  background-image: url('../img/1/path.jpg?1369437709');
+  background-image: url('../img/1/path.jpg?1369435802');
   background-position: center 100%;
   background-attachment: scroll; }
 /* line 37, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .expectation_chart {
-  background: url('../img/1/expectation_chart.svg?1369441558') left top no-repeat;
+  background: url('../img/1/expectation_chart.svg?1369439694') left top no-repeat;
   background-size: contain;
-  margin: 5em auto 2em auto;
-  width: 90%;
+  margin: 5em 0 2em -40px;
+  width: 870px;
   height: 280px;
   position: relative; }
   /* line 45, sass/_chapter1.sass */
@@ -630,7 +624,7 @@ footer {
         margin-bottom: -4px; }
 /* line 89, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers {
-  background-image: url('../img/1/grumpy_man.jpg?1369444550');
+  background-image: url('../img/1/grumpy_man.jpg?1369442609');
   background-position: 70% center; }
   /* line 94, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p {
@@ -687,7 +681,7 @@ footer {
       border-bottom: 2px solid #383838; }
 /* line 120, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers {
-  background-image: url('../img/1/diner.jpg?1369445278');
+  background-image: url('../img/1/diner.jpg?1369444335');
   background-position: 20% center; }
   /* line 125, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
