Highlight words in ch1 intro.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -23,6 +23,10 @@
       @extend .major-alt
       @extend .bordered
 
+    strong
+      color: $green
+      font-weight: normal
+
   .chapter_title
     @extend .on_dark_background
     background-image: image-url('1/path.jpg')
