--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -15,15 +15,16 @@ footer
       width: 50%
 
       &.previous
-        background: image-url('chapter-previous.svg') 30px center no-repeat
+        background: image-url('chapter-previous.svg') left no-repeat
         float: left
 
       &.next
-        background: image-url('chapter-next.svg') 400px center no-repeat
+        background: image-url('chapter-next.svg') right no-repeat
         float: right
 
       a
         color: #fff
+        display: block
         text-decoration: none
 
         .label
