--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -71,24 +71,29 @@
       &#expectation_chart-data_point-1
         left: 157px
         top: 80px
+        @include transition-delay(.2s)
 
       &#expectation_chart-data_point-2
         left: 319px
         top: 46px
+        @include transition-delay(.4s)
 
       &#expectation_chart-data_point-3
         left: 475px
         top: 38px
+        @include transition-delay(.6s)
 
       &#expectation_chart-data_point-4
         left: 642px
         top: 2px
+        @include transition-delay(.8s)
 
       &#expectation_chart-data_point-5
         background: $green
         @include triangle-bottom(4px, $green, down)
         left: 804px
         top: -63px
+        @include transition-delay(1s)
 
   .increase_of_workers
     @extend .background-image
@@ -133,6 +138,3 @@
         @extend .major
 
   .outro
-    p
-      @extend .half
-
