--- a/css/style.css
+++ b/css/style.css
@@ -128,10 +128,16 @@ em {
   font-style: italic; }
 
 /* line 62, sass/_base.sass */
+.contents {
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 48px 0; }
+
+/* line 67, sass/_base.sass */
 article {
   width: 100%; }
 
-/* line 65, sass/_base.sass */
+/* line 70, sass/_base.sass */
 section {
   overflow: hidden;
   *zoom: 1;
@@ -139,64 +145,64 @@ section {
   width: 100%;
   z-index: 3; }
 
-/* line 76, sass/_base.sass */
+/* line 78, sass/_base.sass */
 .fixed, header.site_header,
 header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
 
-/* line 81, sass/_base.sass */
+/* line 83, sass/_base.sass */
 .bleed {
   width: 100%;
   height: 100%; }
-  /* line 85, sass/_base.sass */
+  /* line 87, sass/_base.sass */
   .bleed img {
     width: 100%; }
 
-/* line 88, sass/_base.sass */
-.background-image, .chapter_title, .chapter-1-rethinking-retirement article .increase_of_workers, .chapter-1-rethinking-retirement article .half_of_american_households, .chapter-1-rethinking-retirement article .one_in_four_workers {
+/* line 90, sass/_base.sass */
+section.background-image, section.chapter_title, .chapter-1-rethinking-retirement article section.increase_of_workers, .chapter-1-rethinking-retirement article section.half_of_american_households, .chapter-1-rethinking-retirement article section.one_in_four_workers {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   padding: 3em 6em; }
 
-/* line 94, sass/_base.sass */
-.chapter {
+/* line 96, sass/_base.sass */
+section.chapter {
   text-align: center; }
-  /* line 97, sass/_base.sass */
-  .chapter p {
+  /* line 99, sass/_base.sass */
+  section.chapter p {
     font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
     text-transform: uppercase; }
 
-/* line 101, sass/_base.sass */
-.chapter_title {
+/* line 103, sass/_base.sass */
+section.chapter_title {
   text-align: center;
   text-transform: uppercase;
   padding: 12em 0; }
-  /* line 107, sass/_base.sass */
-  .chapter_title p {
+  /* line 109, sass/_base.sass */
+  section.chapter_title p {
     border-bottom: 2px solid #383838;
     display: inline-block;
     font-size: 14.4px;
     letter-spacing: 1px;
     margin: 0 auto;
     padding: 0 1em 0.25em 1em; }
-  /* line 115, sass/_base.sass */
-  .chapter_title h2 {
+  /* line 117, sass/_base.sass */
+  section.chapter_title h2 {
     font-size: 44px;
     margin: 0; }
-  /* line 120, sass/_base.sass */
-  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p {
+  /* line 122, sass/_base.sass */
+  section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p {
     border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
-  /* line 123, sass/_base.sass */
-  .chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article .chapter_title p,
-  .chapter_title.on_dark_background h2,
-  .chapter-1-rethinking-retirement article .chapter_title h2 {
+  /* line 125, sass/_base.sass */
+  section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p,
+  section.chapter_title.on_dark_background h2,
+  .chapter-1-rethinking-retirement article section.chapter_title h2 {
     color: white;
     text-shadow: #383838 0 0 25px; }
 
-/* line 128, sass/_base.sass */
+/* line 130, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -205,63 +211,22 @@ header.story_header {
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 135, sass/_base.sass */
+/* line 137, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 140, sass/_base.sass */
+/* line 142, sass/_base.sass */
 .copy p {
   font-size: 18px;
   line-height: 1.3; }
 
-/* line 144, sass/_base.sass */
+/* line 146, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
   margin: 0 auto;
   padding: 0.5em 0 0.4em 0;
   width: 75%; }
-
-/* line 1, sass/_grid.sass */
-.half, .chapter-1-rethinking-retirement article .outro p, .twothirds, .onethird, .threefourths, .onefourth {
-  float: left;
-  padding: 24px 10px;
-  width: 100%; }
-
-@media (min-width: 800px) {
-  /* line 16, sass/_grid.sass */
-  .half, .chapter-1-rethinking-retirement article .outro p {
-    width: 50%; } }
-
-@media (min-width: 800px) {
-  /* line 19, sass/_grid.sass */
-  .twothirds {
-    width: 66.66667%; } }
-
-@media (min-width: 800px) {
-  /* line 22, sass/_grid.sass */
-  .onethird {
-    width: 33.33333%; } }
-
-@media (min-width: 800px) {
-  /* line 25, sass/_grid.sass */
-  .threefourths {
-    width: 75%; } }
-
-@media (min-width: 500px) {
-  /* line 28, sass/_grid.sass */
-  .onefourth {
-    width: 50%; } }
-@media (min-width: 800px) {
-  /* line 28, sass/_grid.sass */
-  .onefourth {
-    width: 25%; } }
-
-/* line 31, sass/_grid.sass */
-.container, .contents, header.story_header nav {
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 48px 0; }
 
 /* line 1, sass/_mixins.sass */
 header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point:after, .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
@@ -496,37 +461,38 @@ footer {
     width: 50%; }
     /* line 17, sass/_footer.sass */
     footer nav li.previous {
-      background: url('../img/chapter-previous.svg?1369355902') 30px center no-repeat;
+      background: url('../img/chapter-previous.svg?1369355902') left no-repeat;
       float: left; }
     /* line 21, sass/_footer.sass */
     footer nav li.next {
-      background: url('../img/chapter-next.svg?1369351919') 400px center no-repeat;
+      background: url('../img/chapter-next.svg?1369351919') right no-repeat;
       float: right; }
     /* line 25, sass/_footer.sass */
     footer nav li a {
       color: white;
+      display: block;
       text-decoration: none; }
-      /* line 29, sass/_footer.sass */
+      /* line 30, sass/_footer.sass */
       footer nav li a .label {
         border-bottom: 2px solid #aaaaaa;
         color: #aaaaaa;
         display: inline-block;
         padding-bottom: 0;
         font-size: 19.2px; }
-      /* line 36, sass/_footer.sass */
+      /* line 37, sass/_footer.sass */
       footer nav li a .chapter_title {
         display: block;
         font-size: 30px;
         line-height: 1.1;
         margin: 0.5em auto 0 auto;
         width: 60%; }
-      /* line 43, sass/_footer.sass */
+      /* line 44, sass/_footer.sass */
       footer nav li a:hover {
         color: #548e85; }
-        /* line 46, sass/_footer.sass */
+        /* line 47, sass/_footer.sass */
         footer nav li a:hover .label {
           border-bottom-color: #548e85; }
-  /* line 49, sass/_footer.sass */
+  /* line 50, sass/_footer.sass */
   footer a {
     color: white; }
 
@@ -600,24 +566,44 @@ footer {
     /* line 71, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-1 {
       left: 157px;
-      top: 80px; }
-    /* line 75, sass/_chapter1.sass */
+      top: 80px;
+      -webkit-transition-delay: 0.2s;
+      -moz-transition-delay: 0.2s;
+      -o-transition-delay: 0.2s;
+      transition-delay: 0.2s; }
+    /* line 76, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-2 {
       left: 319px;
-      top: 46px; }
-    /* line 79, sass/_chapter1.sass */
+      top: 46px;
+      -webkit-transition-delay: 0.4s;
+      -moz-transition-delay: 0.4s;
+      -o-transition-delay: 0.4s;
+      transition-delay: 0.4s; }
+    /* line 81, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-3 {
       left: 475px;
-      top: 38px; }
-    /* line 83, sass/_chapter1.sass */
+      top: 38px;
+      -webkit-transition-delay: 0.6s;
+      -moz-transition-delay: 0.6s;
+      -o-transition-delay: 0.6s;
+      transition-delay: 0.6s; }
+    /* line 86, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-4 {
       left: 642px;
-      top: 2px; }
-    /* line 87, sass/_chapter1.sass */
+      top: 2px;
+      -webkit-transition-delay: 0.8s;
+      -moz-transition-delay: 0.8s;
+      -o-transition-delay: 0.8s;
+      transition-delay: 0.8s; }
+    /* line 91, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5 {
       background: #548e85;
       left: 804px;
-      top: -63px; }
+      top: -63px;
+      -webkit-transition-delay: 1s;
+      -moz-transition-delay: 1s;
+      -o-transition-delay: 1s;
+      transition-delay: 1s; }
       /* line 17, sass/_mixins.sass */
       .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5:after {
         bottom: 0;
@@ -626,11 +612,11 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 93, sass/_chapter1.sass */
+/* line 98, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers {
   background-image: url('../img/1/grumpy_man.jpg?1369442609');
   background-position: 70% center; }
-  /* line 98, sass/_chapter1.sass */
+  /* line 103, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p {
     clear: left;
     background: white;
@@ -649,24 +635,24 @@ footer {
       margin: 0.75em auto 0;
       width: 50px;
       border-bottom: 2px solid #383838; }
-    /* line 101, sass/_chapter1.sass */
+    /* line 106, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span {
       display: block;
       line-height: 1;
       margin: 0.25em 0 0.5em;
       padding: 0.75em 0 0.75em;
       width: 100%; }
-      /* line 109, sass/_chapter1.sass */
+      /* line 114, sass/_chapter1.sass */
       .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
         display: inline-block;
         font-family: "BodoniW01-PosterItalic";
         font-size: 60px;
         margin: 0 0.1em; }
-/* line 115, sass/_chapter1.sass */
+/* line 120, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households {
   background-image: url('../img/1/jars.jpg?1369445831');
   background-position: 20% center; }
-  /* line 120, sass/_chapter1.sass */
+  /* line 125, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .half_of_american_households p {
     clear: left;
     background: white;
@@ -683,11 +669,11 @@ footer {
       margin: 0.75em auto 0;
       width: 50px;
       border-bottom: 2px solid #383838; }
-/* line 124, sass/_chapter1.sass */
+/* line 129, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers {
   background-image: url('../img/1/diner.jpg?1369444335');
   background-position: 20% center; }
-  /* line 129, sass/_chapter1.sass */
+  /* line 134, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
     clear: left;
     background: white;
